fix nav jump

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,8 +9,6 @@
 
 body {
   overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: hidden;
   touch-action: none;
 }
 
